fix: fix mistakes

--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ header .wrapper {
 .scopes span {
   color: rgb(246, 255, 0);
 }
-.code {
+.blue {
   color: rgb(0, 153, 255);
   margin-top: 0;
 }
